--- a/glade/session_add_edit.glade
+++ b/glade/session_add_edit.glade
@@ -90,6 +90,7 @@
                 <property name="secondary_icon_activatable">False</property>
                 <property name="primary_icon_sensitive">True</property>
                 <property name="secondary_icon_sensitive">True</property>
+                <signal name="changed" handler="on_entry_place_changed" swapped="no"/>
               </widget>
               <packing>
                 <property name="left_attach">1</property>
